added HTML content

--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meeet</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./style.css">
+  <title>Meeet.</title>
 </head>
 <body>
-  
+  <header>
+    <img src="./Assets/Logo.svg" alt="Meeet.">
+  </header>
+  <main>
+    <div>
+      <img id="img-1" src="./Assets/User Avatar 1.svg" alt="User Avatar 1">
+      <img id="img-2" src="./Assets/User Avatar 2.svg" alt="User Avatar 2">
+      <img id="img-3" src="./Assets/User Avatar 3.svg" alt="User Avatar 3">
+      <img id="img-4" src="./Assets/User Avatar 4.svg" alt="User Avatar 4">
+      <img id="img-5" src="./Assets/User Avatar 5.svg" alt="User Avatar 5">
+      <img id="img-6" src="./Assets/User Avatar 6.svg" alt="User Avatar 6">
+    </div>
+    <h1>Meeet New Entrepreneurs</h1>
+    <p>Meeet is a new social media platform for entrepre<span>n</span>eurs to connect and socialize.</p>
+    <a href="#">Get notified at launch</a>
+  </main>
+  <footer>
+    <img src="./Assets/Twitter.svg" alt="Follow us on Twitter">
+  </footer>
 </body>
 </html>
