--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
   <title>Meeet.</title>
 </head>
 <body>
-  <header>
-    <img src="./Assets/Logo.svg" alt="Meeet.">
-  </header>
-  <main>
-    <div>
-      <img id="img-1" src="./Assets/User Avatar 1.svg" alt="User Avatar 1">
-      <img id="img-2" src="./Assets/User Avatar 2.svg" alt="User Avatar 2">
-      <img id="img-3" src="./Assets/User Avatar 3.svg" alt="User Avatar 3">
-      <img id="img-4" src="./Assets/User Avatar 4.svg" alt="User Avatar 4">
-      <img id="img-5" src="./Assets/User Avatar 5.svg" alt="User Avatar 5">
-      <img id="img-6" src="./Assets/User Avatar 6.svg" alt="User Avatar 6">
-    </div>
-    <h1>Meeet New Entrepreneurs</h1>
-    <p>Meeet is a new social media platform for entrepre<span>n</span>eurs to connect and socialize.</p>
-    <a href="#">Get notified at launch</a>
-  </main>
-  <footer>
-    <img src="./Assets/Twitter.svg" alt="Follow us on Twitter">
-  </footer>
+  <div id="img-container">
+    <img id="img-1" src="./Assets/User Avatar 1.svg" alt="User Avatar 1">
+    <img id="img-2" src="./Assets/User Avatar 2.svg" alt="User Avatar 2">
+    <img id="img-3" src="./Assets/User Avatar 3.svg" alt="User Avatar 3">
+    <img id="img-4" src="./Assets/User Avatar 4.svg" alt="User Avatar 4">
+    <img id="img-5" src="./Assets/User Avatar 5.svg" alt="User Avatar 5">
+    <img id="img-6" src="./Assets/User Avatar 6.svg" alt="User Avatar 6">
+  </div>
+
+  <div id="content-container">
+    <header>
+      <img id="meeet-logo" src="./Assets/Logo.svg" alt="Meeet.">
+    </header>
+    <main>
+      <h1>Meet New Entrepreneurs</h1>
+      <p>Meeet is a new social media platform for entrepre<span>n</span>eurs to connect and socialize.</p>
+      <a href="#">Get notified at launch</a>
+    </main>
+    <footer>
+      <img src="./Assets/Twitter.svg" alt="Follow us on Twitter"><span>Follow us on Twitter</span>
+    </footer>
+  </div>
 </body>
 </html>
