what a mess. Messing with media queries.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
       <img id="meeet-logo" src="./Assets/Logo.svg" alt="Meeet.">
     </header>
     <main>
-      <h1>Meet New Entrepreneurs</h1>
+      <h1>Me<span id="extra">e</span>et New Entrepreneurs</h1>
       <p>Meeet is a new social media platform for entrepre<span>n</span>eurs to connect and socialize.</p>
       <a href="#">Get notified at launch</a>
     </main>
     <footer>
-      <img src="./Assets/Twitter.svg" alt="Follow us on Twitter"><span>Follow us on Twitter</span>
+      <img src="./Assets/Twitter.svg" alt="Follow us on Twitter">
+      <span>Follow us on Twitter</span>
     </footer>
   </div>
 </body>
